# algorithm

./: .clang-format  .gitignore  Cargo.toml  Makefile  README.md  go.mod
algorithmic_toolbox/week1_programming_challenges/2_maximum_pairwise_product/: max_pairwise_product.cpp
algorithmic_toolbox/week2_algorithmic_warmup/1_fibonacci_number/: fibonacci.cpp
algorithmic_toolbox/week2_algorithmic_warmup/2_last_digit_of_fibonacci_number/: fibonacci_last_digit.cpp
algorithmic_toolbox/week2_algorithmic_warmup/3_greatest_common_divisor/: gcd.cpp
algorithmic_toolbox/week2_algorithmic_warmup/4_least_common_multiple/: lcm.cpp
algorithmic_toolbox/week2_algorithmic_warmup/5_fibonacci_number_again/: fibonacci_huge.cpp
aoc/src/: main.rs
aoc/src/days/: day2.rs  day3.rs  day4.rs  day5.rs
aoc/src/utils/: mod.rs
aoc2021/src/days/: day1.rs  day2.rs  day3.cpp
aoc2022/src/: main.rs
aoc2022/src/days/: day1.rs
aoc2023/: Makefile  day1.cpp  day2.cpp  utils.hpp
aoc2025/: build.zig  build.zig.zon
aoc2025/src/: day1.zig
atcoder/beginner/284/: a_sequence_of_strings.cpp  b_multi_test_cases.cpp  c_count_connected_components.cpp
codeforces/: make_even.cpp
codeforces/158div2/: a_line_trip.cpp  b_chip_and_ribbon.cpp
codeforces/762div3/: a_square_string.cpp  b_squares_and_cubes.cpp  c_wrong_addition.cpp
codeforces/edu141div2/: a_make_it_beautiful.cpp
codeforces/goodbye_2022/: Cargo.toml  a.in  b_koxia_and_permutation.cpp
codeforces/goodbye_2022/src/: lib.rs
codeforces/practice/: team.cpp
cses/: .gitignore  Makefile  compile_commands.json  increasing_array.cpp  missing_number.cpp  number_spiral.cpp  permutations.cpp  repetitions.cpp  weird_algorithm.cpp
hackerrank/array/2d_array_ds/: main.cpp
hackerrank/array/left_rotation/: main.cpp
hackerrank/array/minimum_swaps_2/: main.cpp
hackerrank/array/new_year_chaos/: main.cpp
hackerrank/hashmaps/count_triplets/: Makefile  main.cpp
leetcode/array/best_time_to_buy_and_sell_stock/: main.cpp
leetcode/array/best_time_to_buy_and_sell_stock_ii/: Makefile  main.cpp
leetcode/array/build_array_from_permutation/: main.cpp
leetcode/array/concatenation_of_array/: main.cpp
leetcode/array/final_value_of_variable_after_performing_operations/: main.cpp
leetcode/array/find_target_indices_after_sorting_array/: main.cpp
leetcode/array/kids_with_greatest_number_of_candy/: main.cpp
leetcode/array/maximum_subarray/: main.cpp
leetcode/array/next_permutation/: main.cpp
leetcode/array/number_of_islands/: main.cpp
leetcode/array/remove_duplicates_from_sorted_array/: main.cpp
leetcode/array/rotate_array/: main.cpp
leetcode/array/running_sum_of_1d_array/: main.cpp
leetcode/array/sort_the_matrix_diagonally/: main.cpp
leetcode/array/subrectangle_queries/: main.cpp
leetcode/binary_search/peak_index_in_a_mountain_array/: main.cpp
leetcode/binary_search/sqrtx/: main.cpp
leetcode/bit_manipulation/hamming_distance/: main  main.cpp
leetcode/depth_first_search/course_schedule/: main.cpp
leetcode/depth_first_search/path_sum/: main.cpp
leetcode/depth_first_search/same_tree/: main.cpp
leetcode/depth_first_search/symmetric_tree/: main.cpp
leetcode/depth_first_search/validate_binary_search_tree/: main.cpp
leetcode/design/design_parking_system/: main.cpp
other/: Makefile  palindrome.cpp
other/pln2022_workshop/: cp_book_link.txt
other/practice/: a.cpp  b.cpp  c.cpp
other/sitecore/: README.md
other/tcd/: q1.cpp  q2.cpp  q3.cpp
other/ucd_coding_comp/: main.cpp
other/y2123/: README.md  technical_interview.go
other/y2123/go/: main.go  (+1 more)
utils/: display.cpp  display.h
(+84 files in other folders)
