[package]
edition = "2018"
name = "algorithm"
version = "0.1.0"

[[bin]]
name = "binary_search"
path = "leetcode/studyplan_algorithm1/binary_search/binary_search/main.rs"

[[bin]]
name = "first_bad_version"
path = "leetcode/studyplan_algorithm1/binary_search/first_bad_version/main.rs"

[[bin]]
name = "search_insert_position"
path = "leetcode/studyplan_algorithm1/binary_search/search_insert_position/main.rs"

[[bin]]
name = "squares_of_a_sorted_array"
path = "leetcode/studyplan_algorithm1/two_pointers/squares_of_a_sorted_array/main.rs"

[[bin]]
name = "rotate_array"
path = "leetcode/studyplan_algorithm1/two_pointers/rotate_array/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
